--- a/styles/style.css
+++ b/styles/style.css
@@ -3,26 +3,75 @@
 /* common style and utilities */
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 header {
+  margin-top: 50px;
   display: flex;
   justify-content: center;
 }
 .website-title h1 {
   font-size: 24px;
 }
-
+/* main style */
 main {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 50px;
 }
 .container {
-  width: 960px;
+  width: 1047px;
+}
+
+/* top banner style */
+.top-banner {
+  display: flex;
+  margin-bottom: 50px;
+  height: 500px;
+  align-items: center;
+}
+.top-text {
+  width: 50%;
+}
+.top-text h1 {
+  font-size: 52px;
+  margin: 5px 0;
+}
+.button {
+  background-color: #e02c6d;
+  padding: 5px 20px;
+  text-decoration: none;
+  color: white;
+  border-radius: 25px;
+  transition: all 0.3s ease-in-out;
+}
+.top-image {
+  width: 50%;
+}
+.top-image img {
+  width: 90%;
+  margin-left: 15%;
+  transition: transform 0.2s ease;
+}
+
+.top-image:hover img {
+  transform: scale(1.3);
+}
+.button:hover {
+  background-color: white;
+  padding: 10px 30px;
+  color: #e02c6d;
+  border: 1px solid #e02c6d;
 }
 
 /* product style */
+.collection-title {
+  text-align: center;
+  margin-bottom: 50px;
+}
 .products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -62,4 +111,164 @@ main {
   font-size: 16px;
   color: #e02c6d;
   font-weight: 700;
+}
+
+/* photo album */
+.photo-album {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+.photo-frame {
+  width: 300px;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+.photo img {
+  width: 100%;
+  border-radius: 5px;
+}
+.photo-detail {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 0%;
+}
+.photo-detail h3 {
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+.photo-detail p {
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
+.photo-frame:hover .photo-detail {
+  height: 100%;
+  background-color: rgba(36, 36, 36, 0.5);
+  transition: height 0.3s ease-in;
+}
+.photo-frame:hover .photo {
+  transform: scale(1.2);
+  transition: transform 0.3s ease-in;
+}
+.album-button {
+  text-align: center;
+}
+
+/* footer style */
+footer {
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding: 40px 0;
+  text-align: center;
+}
+.footer-text h1 {
+  font-size: 24px;
+}
+.footer-text p {
+  font-size: 14px;
+}
+.footer-icon .fab {
+  color: white;
+  font-size: 20px;
+  margin: 0 10px;
+}
+
+/* Mobile devices */
+@media only screen and (max-width: 688px) {
+  header {
+    margin-top: 20px;
+  }
+  .container {
+    width: 100%;
+  }
+  .website-title {
+    text-align: center;
+    font-size: 18px;
+  }
+  .top-banner {
+    flex-direction: column;
+    text-align: center;
+    height: 600px;
+    padding: 10px;
+  }
+  .top-text {
+    width: 100%;
+    order: 2;
+  }
+  .top-text h1 {
+    font-size: 28px;
+  }
+  .top-image {
+    width: 100%;
+    order: 1;
+  }
+  .top-image img {
+    margin: 0;
+  }
+  .see-more-btn {
+    justify-content: center;
+  }
+  .products,
+  .photo-album {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .popular-collection,
+  .photo-album {
+    margin: 20px;
+  }
+  .photo-frame {
+    width: 100%;
+  }
+}
+
+/* tablet devices */
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+  header {
+    margin-top: 20px;
+  }
+  .container {
+    width: 100%;
+  }
+  .website-title {
+    margin: 40px;
+  }
+  .top-banner {
+    height: 300px;
+    margin: 40px;
+  }
+  .top-image {
+    margin-left: 20px;
+  }
+  .website-title {
+    font-size: 18px;
+  }
+  .top-text h1 {
+    font-size: 28px;
+  }
+  .top-image {
+    width: 50%;
+  }
+  .top-image img {
+    margin: 0;
+  }
+  .see-more-btn {
+    justify-content: center;
+  }
+  .products,
+  .photo-album {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .popular-collection,
+  .photo-album {
+    margin: 20px;
+  }
+  .photo-frame {
+    width: 100%;
+  }
 }
