--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 /* common style and utilities */
@@ -6,6 +7,10 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* -------------------
+      Header style
+------------------------- */
 header {
   margin-top: 50px;
   display: flex;
@@ -14,7 +19,10 @@ header {
 .website-title h1 {
   font-size: 24px;
 }
-/* main style */
+
+/* -------------------
+      Main part style
+------------------------- */
 main {
   display: flex;
   justify-content: center;
@@ -26,7 +34,9 @@ main {
   width: 1047px;
 }
 
-/* top banner style */
+/* -------------------
+      Top banner style
+------------------------- */
 .top-banner {
   display: flex;
   margin-bottom: 50px;
@@ -67,7 +77,9 @@ main {
   border: 1px solid #e02c6d;
 }
 
-/* product style */
+/* --------------------------
+    product collection style
+----------------------------*/
 .collection-title {
   text-align: center;
   margin-bottom: 50px;
@@ -113,7 +125,9 @@ main {
   font-weight: 700;
 }
 
-/* photo album */
+/* -------------------
+      photo album style
+------------------------- */
 .photo-album {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -159,7 +173,10 @@ main {
   text-align: center;
 }
 
-/* footer style */
+/* -------------------
+      Footer style
+------------------------- */
+
 footer {
   width: 100%;
   background-color: black;
@@ -179,7 +196,9 @@ footer {
   margin: 0 10px;
 }
 
-/* Mobile devices */
+/* -------------------
+      Mobile devices
+------------------------- */
 @media only screen and (max-width: 688px) {
   header {
     margin-top: 20px;
@@ -227,7 +246,9 @@ footer {
   }
 }
 
-/* tablet devices */
+/* -------------------
+      tablet devices 
+------------------------- */
 @media only screen and (min-width: 688px) and (max-width: 992px) {
   header {
     margin-top: 20px;
